--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "miniprogram",
   "main": "lib/index.js",
   "scripts": {
-    "build": "node ./examples/index.js",
+    "example": "node ./examples/index.js",
+    "build": "gulp && sh ./build/release.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": ["lib"],
+  "files": [
+    "lib",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/fafayzf/m2v.git"
@@ -43,6 +47,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "npx-version": "^1.1.5"
   }
 }
