--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "domhandler": "^5.0.3",
     "htmlparser2": "^8.0.1",
     "js-beautify": "^1.14.4",
+    "loadsh": "^0.0.4",
     "npx-version": "^1.1.5",
     "postcss": "^5.2.18",
     "rollup-plugin-uglify": "^6.0.4",
