--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "js-beautify": "^1.14.4",
     "loadsh": "^0.0.4",
     "npx-version": "^1.1.5",
-    "postcss": "^5.2.18",
+    "postcss": "^8.4.16",
+    "postcss-import": "11.1.0",
     "rollup-plugin-uglify": "^6.0.4",
     "uppercamelcase": "^3.0.0"
   }
